@@ -1,3 +1,7 @@
+2014-11-07  c.hetherington  <cth@carlh.net>
+
+	* Add a hint if there is 3D content in a proposed 2D DCP.
+
 2014-11-06  Carl Hetherington  <cth@carlh.net>
 
 	* Basic support for emailing a report of
